--- a/studentportal/templates/login.html
+++ b/studentportal/templates/login.html
@@ -2,26 +2,28 @@
 {%load static %}
 {%load crispy_forms_tags %}
 {%block title%}
-register
+login
 {%endblock%}
 {%block content%}
 <div class="container">
   <form method="POST">
     {% csrf_token %}
+    {{ form|crispy }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Join Today</legend>
-      {{ form|crispy }}
+      <legend class="border-bottom mb-4">Log In</legend>
     </fieldset>
     <div class="form-group">
       <button href="" class="btn btn-outline-info" type="submit">
-        Sign Up
+        Sign In
       </button>
     </div>
   </form>
   <div class="border-top pt-3">
-    <small class="text-muted">Already have an account?
-      <a class="ml-2" href="{% url 'login'%}">Sign In</a>
+    <small class="text-muted">Need an Account?
+      <a class="ml-2" href="{% url 'register'%}">Create an Account</a>
     </small>
   </div>
 </div>
-{% endblock %}
+
+
+{%endblock%}
